infobash (3.48) UNRELEASED; urgency=medium

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 13 Apr 2014 23:03:40 +0200

infobash (3.47) unstable; urgency=low

  * bump standards version to 3.9.5, no changes necessary.
  * debian/control: switch Vcs tags to github.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 13 Apr 2014 22:59:54 +0200

infobash (3.46) unstable; urgency=low

  * bump standards version to 3.9.4, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 12 Jan 2013 03:05:21 +0100

infobash (3.45) unstable; urgency=low

  * detect IRC client more reliably, thanks to locsmif.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 10 Mar 2012 22:30:10 +0100

infobash (3.44) unstable; urgency=low

  * further nullglob/ test bugfixes from locsmif.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 10 Mar 2012 22:06:15 +0100

infobash (3.43) unstable; urgency=low

  * drop nullglob clearing to avoid wrong output, thanks to locsmif.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 10 Mar 2012 18:43:52 +0100

infobash (3.42) unstable; urgency=low

  * bump standards version to 3.9.3, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 23 Feb 2012 16:40:47 +0100

infobash (3.41) unstable; urgency=low

  * drop armel again, without Core IDs (^processor\t\:) matching it is fragile
    and will probably break for multi-core armel devices.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 21 Jan 2012 23:38:23 +0100

infobash (3.40) unstable; urgency=low

  * add cpuinfo parsing for:
    - armel, thanks to DonKult (untested)
  * fix CPU parsing regression on x86.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 20 Jan 2012 15:03:37 +0100

infobash (3.39) unstable; urgency=low

  * add cpuinfo parsing for:
    - mips (tested)
    - sparc (untested)
    - ppc (untested)

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 20 Jan 2012 14:34:08 +0100

infobash (3.38) unstable; urgency=low
